--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,11 @@
-annotated-doc==0.0.4
-annotated-types==0.7.0
-anyio==4.12.1
-backoff==2.2.1
-beautifulsoup4==4.14.3
-certifi==2026.1.4
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.1.8
-cryptography==46.0.5
-curl_cffi==0.13.0
-exceptiongroup==1.3.1
-fastapi==0.128.8
-frozendict==2.4.7
-google-auth==2.48.0
-google-genai==1.47.0
-googleapis-common-protos==1.72.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-idna==3.11
-importlib_metadata==8.7.1
-langfuse==3.7.0
-multitasking==0.0.12
-numpy==2.0.2
-opentelemetry-api==1.39.1
-opentelemetry-exporter-otlp-proto-common==1.39.1
-opentelemetry-exporter-otlp-proto-http==1.39.1
-opentelemetry-proto==1.39.1
-opentelemetry-sdk==1.39.1
-opentelemetry-semantic-conventions==0.60b1
-packaging==25.0
-pandas==2.3.3
-peewee==3.19.0
-platformdirs==4.4.0
-protobuf==6.33.5
-pyasn1==0.6.2
-pyasn1_modules==0.4.2
-pycparser==2.23
-pydantic==2.12.5
-pydantic_core==2.41.5
-python-dateutil==2.9.0.post0
-python-dotenv==1.2.1
-pytz==2025.2
-requests==2.32.5
-rsa==4.9.1
-six==1.17.0
-soupsieve==2.8.3
-starlette==0.49.3
-tenacity==9.1.2
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.3
-uvicorn==0.39.0
-websockets==15.0.1
-wrapt==1.17.3
-yfinance==1.2.0
-zipp==3.23.0
-gunicorn==23.0.0
-fredapi==0.5.2
+fastapi
+uvicorn
+pydantic
+google-genai
+langfuse
+pandas
+yfinance
+fredapi
+python-dotenv
+beautifulsoup4
+requests
